--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^3.2",
-        "saikiran/geohash": "^1.0"
+        "saikiran/geohash": "^1.0",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
